# aulas/aula10/routes/produtosRouter.js
@@ -6,6 +6,8 @@ const router = express.Router();
 router.post("/", controller.validarDados, controller.criar);
 
 router.get("/", controller.buscarTodos);
-router.get("/:id", controller.buscarPorId);
+router.get("/:id", controller.buscarPorId, controller.buscar);
+router.put("/:id", controller.validarDados, controller.buscarPorId, controller.atualizar);
+router.delete("/:id", controller.buscarPorId, controller.deletar);
 
 module.exports = router;
